<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NewOffsetNotesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="1dp">

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:backgroundTint="@android:color/transparent"
                android:cursorVisible="true"
                android:ems="10"
                android:gravity="start"
                android:inputType="textPersonName|textMultiLine"
                android:lines="2"
                android:maxLines="2"
                android:minLines="1"
                android:text="@string/name_job" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_job"
                style="@style/Number"
                tools:ignore="TextFields" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edMachine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/machine"
                android:backgroundTint="@android:color/transparent"
                style="@style/Number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                style="@style/Number"
                android:id="@+id/edMaterialName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/material" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edPaperFormat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/paper_format"
                style="@style/Number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edCountSheets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/count_sheets"
                android:backgroundTint="@android:color/transparent"
                style="@style/Number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edThickness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/paper_thickness"
                android:backgroundTint="@android:color/transparent"
                style="@style/Number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edDensity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/paper_density"
                android:backgroundTint="@android:color/transparent"
                style="@style/Number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edCountPlates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/count_plates"
                android:backgroundTint="@android:color/transparent"
                style="@style/Number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edPlatesFormat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/plat_format"
                android:backgroundTint="@android:color/transparent"
                style="@style/Number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edCountColorsNames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:lines="5"
                android:maxLines="5"
                android:minLines="1"
                android:text="@string/count_colors_names"
                style="@style/Number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/description"
                android:backgroundTint="@android:color/transparent"
                style="@style/Number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:background="#9E9696"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRasxod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rasxod_material"
                    android:textColor="@color/black" />
            </LinearLayout>

            <EditText
                android:id="@+id/edCountMaterial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/count_material"
                style="@style/Number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edCountStockMaterial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/stock_out_paper"
                style="@style/Number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edRemainderMaterial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/remainder_material"
                style="@style/Number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edSetupMaterial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/setup_material"
                style="@style/Number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edInksName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/inks_print"
                android:lines="5"
                android:maxLines="5"
                android:minLines="1"
                style="@style/Number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edInksJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/inks_print_job"
                android:lines="5"
                android:maxLines="5"
                android:minLines="1"
                style="@style/Number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edAlcoCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/alko_print_count"
                android:lines="2"
                android:maxLines="2"
                android:minLines="2"
                style="@style/Number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edPHname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/pH_print_name"
                android:backgroundTint="@android:color/transparent"
                style="@style/Number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edPHCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/pH_print_count"
                android:backgroundTint="@android:color/transparent"
                style="@style/Number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edOtherName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/other_materials_name"
                android:lines="5"
                android:maxLines="5"
                android:minLines="1"
                style="@style/Number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/edOtherCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/other_materials_count"
                android:lines="5"
                android:maxLines="5"
                android:minLines="1"
                style="@style/Number"  />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#EC0808"
                android:orientation="vertical">

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>